--- a/main.html
+++ b/main.html
@@ -11,11 +11,13 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <h1> What is the capital of India?</h1>
-<input type="radio"><label for="new delhi">New Delhi</label>
+<input type="radio">
+<label for="new delhi">New Delhi</label>
 
 <br>
 
-<input type="radio"><label for="mumbai">Mumbai</label>
+<input type="radio">
+<label for="mumbai">Mumbai</label>
 
 <br>
 <br>
